--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -121,27 +121,26 @@
         </nav>
       </div></header>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro 21H2 by Adderly (21.06.2022)<br>
         </h6>
-        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/photo_2022-06-21_21-47-42.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-image-2" src="images/photo_2022-06-21_21-47-422.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/photo_2022-06-21_21-47-43.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/photo_2022-06-21_21-47-411.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows1021H2byAdderly-2022-08-14-21-37-12.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-2" src="images/Windows1021H2byAdderly-2022-08-14-21-38-11.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-3" src="images/2022-08-14214127.png" alt="" data-image-width="495" data-image-height="263">
+        <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-14214424.png" alt="" data-image-width="603" data-image-height="340">
         <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
-          <br>Удалены приложения "Zune Music, Ваш телефон, Карты, Центр отзывов, Камера, Скайп, Портал смешанной реальности, Microsoft Office, OneNote, Sticky Notes, Solitaire Collection, 3D Viewer, 3D Paint" <br>
+          <br>Удалены приложения "Почта, One Note, Камера" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
-          <br>Включён DirectPlay <br>
-          <br>Отключён Windows Media Player <br>Отключён Internet Explorer <br>(по желанию можно вернуть) <br>
+          <br>Включён DirectPlay&nbsp;<br>
+          <br>Отключен файл подкачки<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
-          <br>Образ весит 5.96 GB, после установки Windows занимает 11 GB (стандартная 21H2 занимает 24 GB) <br>
+          <br>Образ весит 6.5 GB, после установки Windows занимает 19.8 GB (стандартная 21H2 занимает 24 GB) <br>
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
-          <br>Обязательно ставить с интернетом!<br>
         </p>
-        <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro 21H2 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1jSfHGmjKvO82IhDkUoEbl-PSPQHujzhd/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [Google Drive]</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro 1607 by Adderly (22.06.2022)</h6>
         <img class="u-expanded-width-sm u-image u-image-default u-image-5" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
@@ -168,7 +167,7 @@
     <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-47ae">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
-        <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro  21H2 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1jSfHGmjKvO82IhDkUoEbl-PSPQHujzhd/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [Google Drive]</a>
         <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro 1607 by Adderly [Google Drive]</a>
       </div>
     </section>
