--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -77,9 +77,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -108,9 +108,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -120,17 +120,17 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
+    <section class="u-align-center u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro 21H2 by Adderly (21.06.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro V2 21H2 by Adderly (14.08.2022)<br>
         </h6>
         <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows1021H2byAdderly-2022-08-14-21-37-12.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-image-2" src="images/Windows1021H2byAdderly-2022-08-14-21-38-11.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-image-3" src="images/2022-08-14214127.png" alt="" data-image-width="495" data-image-height="263">
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-14214424.png" alt="" data-image-width="603" data-image-height="340">
-        <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
+        <p class="u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Почта, One Note, Камера" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
@@ -146,7 +146,7 @@
         <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-xs u-image u-image-default u-image-7" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <p class="u-align-center-xl u-text u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
+        <p class="u-text u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
           <br>Удалён OneDrive и Microsoft Defender из автозагрузки <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
@@ -158,10 +158,25 @@
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
         <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro 1607 by Adderly [Google Drive]</a>
-        <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 11</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
+        <h6 class="u-text u-text-default u-text-white u-text-6">Windows 10 Pro V2 1709 by Adderly (15.08.2022)</h6>
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows10x64-2022-06-22-21-41-26.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-10" src="images/Windows10x64-2022-06-22-21-41-54.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-11" src="images/Windows10x64-2022-06-22-21-41-11.png" alt="" data-image-width="1366" data-image-height="768">
+        <p class="u-text u-text-default-xl u-text-white u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления.&nbsp;<br>
+          <br> Удалены приложения "X" <br>
+          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
+          <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
+          <br>Включён DirectPlay&nbsp;<br>
+          <br>Отключен файл подкачки<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>
+          <br>Образ весит X GB, после установки Windows занимает X GB <br>
+          <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
+        </p>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
+        <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
+        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 11</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 7</a>
       </div>
     </section>
     <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-47ae">
