--- a/Windows-Lite-сборки.html
+++ b/Windows-Lite-сборки.html
@@ -77,9 +77,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -108,9 +108,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -120,26 +120,14 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-1120" data-image-width="1366" data-image-height="768">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <section class="u-align-center u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-1120" data-image-width="1366" data-image-height="768">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-white u-text-1">Сборки Windows Lite<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro Lite 1709 by Adderly (22.06.2022)</h6>
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows10x64-2022-06-22-21-41-26.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows10x64-2022-06-22-21-41-54.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows10x64-2022-06-22-21-41-11.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-center-xl u-text u-text-default u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся рег файлы,<br>чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
-          <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
-          <br>Удалён OneDrive из автозагрузки <br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, x86 и x64<br>(Докачать можно на сайте, я не добавлял чтобы меньше весил)&nbsp;<br>
-          <br>Интегрирован Framework 4.7.2 <br>
-          <br>Образ весит 4 GB, после установки Windows занимает 8.38 GB <br>
-          <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
-          <br>В этой сборке нет инсталяторов программ, и обоев.<br>
-          <br>Проверена на слабом ПК, отлично оптимизирована.<br>Обязательно ставить с интернетом!<br>
-        </p>
-        <a href="https://drive.google.com/file/d/1HAlkL0G0b92L0XEAlYZCocXKUHRMaYD0/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro 1709 by Adderly [Google Drive]</a>
-        <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
+        <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-white u-text-2">Сборка Windows 10 1709 Lite превратилась в Windows 10 Pro V2 1709, и переместилась в:<br>
+        </h1>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-1">Сборки Windows 10</a>
+        <p class="u-text u-text-default u-text-white u-text-3">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-2">Сборки Windows 10</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.0</a>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 7</a>
@@ -149,7 +137,6 @@
     <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-b8b3">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
-        <a href="https://drive.google.com/file/d/1HAlkL0G0b92L0XEAlYZCocXKUHRMaYD0/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-1" target="_blank"> Скачать Windows 10 Pro 1709 by Adderly [Google Drive]</a>
       </div>
     </section>
     
