--- a/Windows-Mini-сборки.html
+++ b/Windows-Mini-сборки.html
@@ -76,9 +76,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -107,9 +107,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -144,6 +144,17 @@
           <br>Образ весит 1.53 GB, после установки Windows занимает 11.1 GB.&nbsp;<br>Образ может быть записан на 2 ГБ флешку
         </p>
         <a href="https://drive.google.com/file/d/1CSoqeqxjUsTrqKvJf2jI0UMKqc0OhlAc/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 7 Ultimate Mini by Adderly [Google Drive]</a>
+        <h6 class="u-text u-text-default u-text-white u-text-7">Windows 8.1 Pro Mini by Adderly (14.08.2022)</h6>
+        <img class="u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows8.1Mini-2022-08-14-22-41-00.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-10" src="images/Windows8.1Mini-2022-08-14-22-41-25.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-11" src="images/Windows8.1Mini-2022-08-14-22-42-46.png" alt="" data-image-width="1366" data-image-height="768">
+        <p class="u-text u-text-default u-text-white u-text-8"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы браузеров и KMS<br>
+          <br>Удалены специальные возможности <br>Удалены программы "Таблица символов, WordPad" <br>Удалены все UWP приложения <br>Удалены старые компоненты <br>Удалён DVD проигрыватель <br>Удалены компоненты планшетного ПК <br>Удалены обои <br>Удален Welcome Center <br>Удалены программы удалённого управления. <br>Удалён Recovery <br>Удалён Windows Defender <br>Удалён Flash Player в IE <br>Удалён Windows Help <br>Удалён Windows Error Reportiong <br>Удалён Network Pretection <br>Удалены компоненты MobilePC <br>Удалены компоненты для сенсорных устройств <br>Удалена поддержка Bluetooth <br>Удалена поддержка телефонии, и SmartCard <br>Удалён Security Center <br>Удалёны компоненты Metro <br>Удалены компоненты печати и принтеров <br>Удалён Group Policy Client <br>Удалён Powershell<br>
+          <br>Проверено, из под этой системы можно без флешки с помощью эмуляции установить другие сборки от Аддерли<br>
+          <br>Ключ - GCRJD-8NW9H-F2CDX-CCM8D-9D6T9&nbsp;<br>
+          <br>Образ весит 2.1 GB, после установки Windows занимает 9 GB.&nbsp;<br>
+        </p>
+        <a href="https://drive.google.com/file/d/1NEKQMwWWPH3O0u1AC7pg4HEIP9SwOGqo/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 8.1 Pro Mini by Adderly [Google Drive]</a>
       </div>
     </section>
     <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-section-2" id="sec-9809">
@@ -151,6 +162,7 @@
         <h1 class="u-align-center-md u-align-center-sm u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
         <a href="https://drive.google.com/file/d/1x8SKD1WaG5CUr2ERJ0eibRrgGCugFPs5/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.0  Pro Mini by Adderly [Google Drive]</a>
         <a href="https://drive.google.com/file/d/1CSoqeqxjUsTrqKvJf2jI0UMKqc0OhlAc/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 7 Ultimate Mini by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1NEKQMwWWPH3O0u1AC7pg4HEIP9SwOGqo/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 8.1 Pro Mini by Adderly [Google Drive]</a>
       </div>
     </section>
     
