--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -109,9 +109,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -143,7 +143,10 @@
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-13">Софт от Аддерли</a>
         <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-14">Старые Windows</a>
         <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-15" target="_blank">По поводу uTorrent раздач</a>
-        <a href="https://donatello.to/adderly" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-16" target="_blank">Поддержать Автора сборок</a>
+        <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-16" target="_blank">Поддержать Автора сборок</a>
+        <a href="https://t.me/adderlywindows" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-17" target="_blank">Сборки от Аддерли Telegram</a>
+        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-18" target="_blank">Сборки от Аддерли YouTube</a>
+        <h4 class="u-text u-text-body-alt-color u-text-2">Подпишись! </h4>
       </div>
     </section>
     <section class="u-clearfix u-grey-80 u-section-2" id="sec-f0ab">
@@ -152,7 +155,7 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-32-md u-size-32-sm u-size-32-xs u-size-36-lg u-size-36-xl u-layout-cell-1">
-                <div class="u-container-layout u-valign-bottom-xs u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-container-layout-1">
+                <div class="u-container-layout u-valign-bottom-xs u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-container-layout-1">
                   <h2 class="u-text u-text-default u-text-1">Мои социальные сети.</h2>
                   <p class="u-text u-text-2">Можешь подписаться на несколько моих каналов YouTube и Telegram.<br>А так же, глянуть другие платформы.
                   </p>
@@ -162,13 +165,15 @@
               <div class="u-align-left-sm u-align-left-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-right-cell u-size-24-lg u-size-24-xl u-size-28-md u-size-28-sm u-size-28-xs u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <div class="u-social-icons u-spacing-17 u-social-icons-1">
-                    <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?view_as=subscriber"><span class="u-file-icon u-icon u-social-icon u-social-youtube u-icon-1"><img src="images/1384060.png" alt=""></span>
+                    <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g"><span class="u-file-icon u-icon u-social-icon u-social-youtube u-icon-1"><img src="images/1384060.png" alt=""></span>
                     </a>
-                    <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href="https://www.youtube.com/channel/UCsRW_hgFFKOfJbtMQfKUHOA"><span class="u-file-icon u-icon u-social-icon u-social-youtube u-icon-2"><img src="images/1384060.png" alt=""></span>
+                    <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?view_as=subscriber"><span class="u-file-icon u-icon u-social-icon u-social-youtube u-icon-2"><img src="images/1384060.png" alt=""></span>
                     </a>
-                    <a class="u-social-url" target="_blank" data-type="Telegram" title="Telegram" href="https://t.me/adderlywindows"><span class="u-file-icon u-icon u-social-icon u-social-telegram u-icon-3"><img src="images/2111646.png" alt=""></span>
+                    <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href="https://www.youtube.com/channel/UCsRW_hgFFKOfJbtMQfKUHOA"><span class="u-file-icon u-icon u-social-icon u-social-youtube u-icon-3"><img src="images/1384060.png" alt=""></span>
                     </a>
-                    <a class="u-social-url" target="_blank" data-type="Telegram" title="Telegram" href="https://t.me/adderlyev"><span class="u-file-icon u-icon u-social-icon u-social-telegram u-icon-4"><img src="images/2111646.png" alt=""></span>
+                    <a class="u-social-url" target="_blank" data-type="Telegram" title="Telegram" href="https://t.me/adderlywindows"><span class="u-file-icon u-icon u-social-icon u-social-telegram u-icon-4"><img src="images/2111646.png" alt=""></span>
+                    </a>
+                    <a class="u-social-url" target="_blank" data-type="Telegram" title="Telegram" href="https://t.me/adderlyev"><span class="u-file-icon u-icon u-social-icon u-social-telegram u-icon-5"><img src="images/2111646.png" alt=""></span>
                     </a>
                   </div>
                 </div>
