--- a/Длительность-установки-сборок.html
+++ b/Длительность-установки-сборок.html
@@ -76,9 +76,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -107,9 +107,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -120,7 +120,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-image u-section-1" id="sec-6f8f" data-image-width="597" data-image-height="137">
-      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h3 class="u-align-center u-text u-text-white u-text-1">Тут будет информация о длительности установки сборок от Аддерли На SSD<br>Длительность может не совпадать с вашими подсчетами.<br>Все проверено на комплектующих, написанные ниже:
         </h3>
         <p class="u-align-center u-text u-text-white u-text-2">Комплектующие ноутбука:</p>
@@ -129,11 +129,10 @@
         </p>
         <h1 class="u-align-center u-text u-text-white u-text-5">Длительность установки на SSD:<br>(с помощью эмуляции)
         </h1>
-        <h4 class="u-align-center u-text u-text-white u-text-6"> Длительность установки Windows 11 V2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 20 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 16 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 18 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 17 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 11 ​Мин.<br>Длительности установки Windows 8.0  by Adderly на SSD - 14 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 16 ​Мин.<br>Длительности установки Windows 8.0 Mini by Adderly на SSD - 7 ​Мин.<br>Длительности установки Windows 7 Mini by Adderly на SSD - 5 ​Мин 20с.<br>
-        </h4>
+        <h4 class="u-align-center u-text u-text-white u-text-6">Информация временно не доступна из-за огромного количества обновлений.</h4>
         <h1 class="u-align-center u-text u-text-white u-text-7">Длительность установки на SSD:<br>(с помощью флешки)
         </h1>
-        <h4 class="u-align-center u-text u-text-white u-text-8"> Длительность установки Windows 11 V2 by Adderly на SSD - 7 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 9 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 10 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 8 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 8 Мин.<br> Длительности установки Windows 8.0  by Adderly на SSD - 6 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 9 Мин.<br>Длительности установки Windows 8.0 Mini by Adderly на SSD - 4 ​Мин.<br>Длительности установки Windows 7 Mini by Adderly на SSD - 3 Мин.<br>
+        <h4 class="u-align-center u-text u-text-white u-text-8"> Информация временно не доступна из-за огромного количества обновлений.<br>
         </h4>
       </div>
     </section>
