--- a/Новости.html
+++ b/Новости.html
@@ -75,9 +75,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -106,9 +106,9 @@
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B-%D0%BE%D1%82-FineWork.html">Игры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BE%D1%82-FineWork.html">Приложения</a>
 </li></ul>
 </div>
 </li></ul>
@@ -118,11 +118,18 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-palette-1-dark-1 u-section-1" id="sec-f077">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
+    <section class="u-align-center u-clearfix u-palette-1-dark-1 u-section-1" id="sec-f077">
+      <div class="u-clearfix u-sheet u-valign-middle-md u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Новости Аддерли</h1>
-        <h5 class="u-text u-text-default u-text-2">Дата: 13.08.2022</h5>
-        <h3 class="u-text u-text-3"> 400 Человек! <br>
+        <h5 class="u-text u-text-default-lg u-text-default-xl u-text-2">Дата: 14.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-3">Я наконец закончил свою идею с Windows Mini, хоть и не таким хорошим концом, так как 8.1 весит больше 2 ГБ, так же не вышла одна сборка.<br>
+          <br>Спустя полтора месяца я все таки смог сделать новые версии Windows 10 21H2, и 1709! Проблема уже решена, и теперь её можно ставить абсолютно спокойно, и мне за сборки десяток больше не стыдно! :D<br>
+          <br>Эмоции были очень хорошии, после того как я почувствовал победу над кривой десяткой!<br>
+          <br>Остались только:<br>Windows 8.0 V2 by Adderly<br>и Windows 11 V3 by Adderly!<br>
+          <br>И наконец можно будет уйти в так называемый "отпук", хотя к сожалению это не отпуск, а 9 класс :(
+        </h3>
+        <h5 class="u-text u-text-default u-text-4">Дата: 13.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-5"> 400 Человек! <br>
           <br>И статистика сайта взлетела до небес! <br>За 11 и 12 августа пришло 30 новых человек! <br>
           <br>Такой статистики не было давно, хоть и на этой неделе я про сайт говорил только на своем YouTube канале. <br>
           <br>Сайт я создал 22 июня, благодаря своему другу igroman255, он мне подсказал как начать. <br>
@@ -130,11 +137,11 @@
           <br>Спасибо всем за то что вы пользуетесь моими сборками, и я бы хотел попросить вас рассказать о моих сборках своим друзьям или товарищам, давайте до конца лета 500 пользователей наберем :)
         </h3>
         <img class="u-expanded-width u-image u-image-default u-image-1" src="images/photo_2022-08-13_11-24-47.jpg" alt="" data-image-width="713" data-image-height="369">
-        <h5 class="u-text u-text-default u-text-4">Дата: 11.08.2022</h5>
-        <h3 class="u-text u-text-5">Всем снова привет! Я решил попробовать открыть раздачу торрента Windows 11, но к сожалению у меня проблема с тем, что именно я раздавать не могу, и нужно чтобы это делал кто-то другой.<br>
+        <h5 class="u-text u-text-default u-text-6">Дата: 11.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-7">Всем снова привет! Я решил попробовать открыть раздачу торрента Windows 11, но к сожалению у меня проблема с тем, что именно я раздавать не могу, и нужно чтобы это делал кто-то другой.<br>
         </h3>
-        <h5 class="u-text u-text-default u-text-6">Дата: 10.08.2022</h5>
-        <h3 class="u-text u-text-7">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
+        <h5 class="u-text u-text-default u-text-8">Дата: 10.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-9">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
           <br>Я планирую сделать Windows 8.1 V5, Windows 7 V4, и 8.0 V2, в которых я обновлю выбор браузеров, и других программ, по просьбе людей.<br>
           <br>Windows 10 и 11, я планирую больше не заниматься, так как Windows 11 довольно трудно у меня собиралась, и на это уходило слишком много времени, а Windows 10 просто для меня не любимая система, и сборки которые я сделал уже идеально готовы для использования, единственное главное правило - Нужно ставить с интернетом.<br>
           <br>А еще, в моих планах сделать Windows 8.1 Mini, и Windows 8.0 Mini, которые будут весить меньше 5 GB, и они будут юзабельны.<br>
